# my-dev-team

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: publish.yml
docs/: cli.md  config.md  examples.md  index.md  installation.md  llm.md  ollama.md  rag.md  tools.md
examples/: bookstore_retrieval_demo.txt  calc_app_python.txt  calc_app_python_rag.txt  calc_app_python_seed.txt  cobol_to_python.txt  hello_world_python.txt  python_coding_standards.txt  rag.yaml  retrieval_demo_preview.py  vague_reqs_python.txt
examples/bookstore_flask/: README.md  requirements.txt
examples/bookstore_flask/config/: settings.yaml
examples/bookstore_flask/src/api/: auth_routes.py  book_routes.py  order_routes.py  recommendation_routes.py  review_routes.py
examples/bookstore_flask/src/auth/: login.py  password.py  session.py  two_factor.py
examples/bookstore_flask/src/models/: author.py  base.py  book.py  order.py  review.py  user.py
examples/bookstore_flask/src/services/: email.py  payment.py  recommendations.py  search.py
examples/bookstore_flask/src/utils/: formatters.py  logging.py  validators.py
examples/bookstore_flask/tests/: test_auth.py  test_books.py  test_orders.py  test_recommendations.py  test_validators.py
examples/cobol_payroll/: migrate_to_python.txt
examples/cobol_payroll/src/: PAYROLL.cbl
examples/rag/: python_coding_standards.md
examples/skills/python-expert/: SKILL.md
gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gui/src/: App.jsx  api.js  index.css  store.jsx
gui/src/components/: ArtifactsList.jsx  ChatWindow.jsx  HitlInput.jsx  LeftPanel.jsx  Markdown.jsx  NodeStatus.jsx  PhaseTracker.jsx  Sidebar.jsx  TelemetryPanel.jsx
gui/src/pages/: Dashboard.jsx  History.jsx  NewProject.jsx  ResumeProject.jsx  Welcome.jsx
src/devteam/: settings.py
src/devteam/agents/: __init__.py  base_agent.py  code_analyzer.py  code_judge.py  code_reviewer.py  developer.py  equivalence_checker.py  intermediate_tools.py  migrator.py  product_manager.py  qa_engineer.py  qa_final.py  reporter.py  schemas.py  system_architect.py
src/devteam/cli/: extensions.py  ingest.py  main.py  request.py  runtime.py  usage_report.py
src/devteam/config/: llms.yaml
src/devteam/config/agents/: code-analyzer.md  code-judge.md  code-reviewer.md  (+9 more)
src/devteam/crew/: agents_factory.py  crew_factory.py  event_emitter.py  events.py  execution.py  final_result.py  history.py
src/devteam/extensions/: base_extension.py  console_logger.py  git_committer.py  hitl_cli.py  hitl_gui.py  streamlit_logger.py  workspace_saver.py
src/devteam/gui/: __init__.py  app.py  session.py
src/devteam/managers/: __init__.py  base_manager.py  execution_manager.py  integration_manager.py  migration_manager.py  planning_manager.py  project_manager.py
src/devteam/server/: __init__.py  app.py
src/devteam/skills/: skills.py
src/devteam/state/: __init__.py  project_state.py  task_context.py
src/devteam/tools/: __init__.py  extractor.py  rag.py  registry.py  sandbox.py  schemas.py
src/devteam/utils/: __init__.py  communication_log.py  cost_optimization.py  edits.py  llm_factory.py  logging_utils.py  rate_limiter.py  retriever.py  run_log.py  sanitizer.py  serializer_deserializer.py  status.py  steering.py  stream_handler.py  tasks.py  telemetry.py  usage_stats.py  workspace.py
tests/: conftest.py  test_agents.py  test_base_agent.py  test_cli.py  test_cli_runtime.py  test_communication_log.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_crew.py  test_edits.py  test_extensions.py  test_extensions_more.py  test_gui.py  test_llm_factory.py  test_logging_and_stream.py  test_managers.py  test_run_log.py  test_sandbox.py  test_settings.py  test_skills_rag_registry.py  test_steering.py  test_telemetry.py  test_usage_report.py  test_usage_stats.py  test_utils_core.py  test_workspace.py  test_workspace_retriever.py
(+19 files in other folders)
